--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Fiction'
+- GITenberg
 title: La kolomba premio
 url: http://www.gutenberg.org/ebooks/35981
